--- a/platforms/android/app/src/main/assets/www/AddPage/AddPage.html
+++ b/platforms/android/app/src/main/assets/www/AddPage/AddPage.html
@@ -12,14 +12,13 @@
     <script src="../common/jquery-1.11.3.min.js"></script>
     <script src="../common/jquery.mobile-1.4.5.min.js"></script>
     <script src="../localDB/indexDB.js"></script>
-    <script src="../common/deviceboot.js"></script>
     <script src="AddPage.js"></script>
     <title>addPage</title>
 </head>
 
 <body>
     <div data-role="page">
-        <div data-role="header">
+        <div data-role="header"  data-position="fixed">
             <a href="../AllPage/AllPage.html" class="ui-btn-icon-notext" data-icon="back" rel="external">BACK</a>
             <h1>LocalEnglish</h1>
         </div>
