--- a/platforms/android/app/src/main/assets/www/AllPage/AllPage.html
+++ b/platforms/android/app/src/main/assets/www/AllPage/AllPage.html
@@ -18,12 +18,13 @@
 
 <body>
     <div data-role="page" id="allpage">
-        <div data-role="header">
+        <div data-role="header" data-position="fixed">
             <h1>LocalEnglish</h1>
             <a class="ui-btn-right" href="#confirm_dialog" data-rel="dialog">ClearAll</a>
         </div>
         <div data-role="content" class="content">
             <ul data-role="listview" data-inset="true" data-autodividers="true" class="wordlist" data-filter="true">
+                <h2>loading...</h2>
             </ul>
         </div>
         <div id="card" data-role="popup" data-position-to="window" class="ui-content">
