--- a/platforms/android/app/src/main/assets/www/mainPage/mainPage.html
+++ b/platforms/android/app/src/main/assets/www/mainPage/mainPage.html
@@ -18,7 +18,7 @@
 
 <body>
     <div data-role="page" data-theme="a">
-        <div data-role="header">
+        <div data-role="header" data-position="fixed">
             <h1>LocalEnglish</h1>
             <a href="#about" data-rel="popup" class="ui-btn ui-corner-all ui-nodisc-icon ui-icon-info ui-btn-icon-notext ui-btn-right"
                 data-position-to="window">help</a>
