addpage --after save jump link

--- a/www/mainPage/mainPage.html
+++ b/www/mainPage/mainPage.html
@@ -56,43 +56,43 @@
         <div data-role="content">
             <ul data-role="listview" data-inset="true">
                 <li class="rand-li">
-                    <h3 class="rand-word">alienate</h3>
+                    <h3 class="rand-word">alienate:挑拨,疏远</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">herald</h3>
+                    <h3 class="rand-word">herald:使者</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">handicap</h3>
+                    <h3 class="rand-word">handicap:残疾,缺陷</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">propulsion</h3>
+                    <h3 class="rand-word">propulsion:推进力</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">comrade</h3>
+                    <h3 class="rand-word">comrade:战友</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">voucher</h3>
+                    <h3 class="rand-word">voucher:代金券</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">picturesque</h3>
+                    <h3 class="rand-word">picturesque:生动的</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">integral</h3>
+                    <h3 class="rand-word">integral:必需的</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">sprout</h3>
+                    <h3 class="rand-word">sprout:发芽</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
                 <li class="rand-li">
-                    <h3 class="rand-word">ventilate</h3>
+                    <h3 class="rand-word">ventilate:使通风</h3>
                     <a data-role="button" class="rand-btn">Chinese</a>
                 </li>
             </ul>
